hphp/hack/test/extended_reasons/intersection_subtyping_r.php.debug.exp
error: Typing[4110] Invalid return type

Expected `I`

 7 | function inter_r(C $c) : (A & »I«) {
 8 |   return $c;
 9 | }

File "intersection_subtyping_r.php", line 7, character 31 - line 7, character 31:

But got `C`

 7 | function inter_r(»C« $c) : (A & I) {
 8 |   return $c;
 9 | }

File "intersection_subtyping_r.php", line 7, character 18 - line 7, character 18:

Flow:
{
  "Rflow":[
    {
      "Rflow":[
        {
          "Rflow":[
            {
              "Rflow":[
                {
                  "Rhint":[
                    {
                      "filename":"intersection_subtyping_r.php",
                      "line":7,
                      "char_start":18,
                      "char_end":18
                    }
                  ]
                },
                {
                  "Rwitness":[
                    {
                      "filename":"intersection_subtyping_r.php",
                      "line":7,
                      "char_start":20,
                      "char_end":21
                    }
                  ]
                }
              ]
            },
            {
              "Rwitness":[
                {
                  "filename":"intersection_subtyping_r.php",
                  "line":8,
                  "char_start":10,
                  "char_end":11
                }
              ]
            }
          ]
        },
        {
          "Rwitness":[
            {
              "filename":"intersection_subtyping_r.php",
              "line":8,
              "char_start":3,
              "char_end":12
            }
          ]
        }
      ]
    },
    {
      "Rflow":[
        {
          "Rprj_asymm_right":[
            "Prj_asymm_inter",
            {
              "Rhint":[
                {
                  "filename":"intersection_subtyping_r.php",
                  "line":7,
                  "char_start":26,
                  "char_end":32
                }
              ]
            }
          ]
        },
        {
          "Rhint":[
            {
              "filename":"intersection_subtyping_r.php",
              "line":7,
              "char_start":31,
              "char_end":31
            }
          ]
        }
      ]
    }
  ]
}


File "", line 0, character 0 - line 0, character -1:

1 error found.
